kube/external.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-web-com
  namespace: keycloak-app
spec:
  type: ExternalName
  externalName: keycloak.keycloak-app.svc.cluster.local
